Client structure, implementation of basic components

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TechEd SWD WK07</title>
 
+    <!-- Shut up Favicon -->
+    <link rel="shortcut icon" href="#">
+    
     <!-- JSX -->
+    <script type="module" src="./src/js/app.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </head>
 
